# ai-fridays-agent

./: pyproject.toml
src/agentstack_agents/: agent.py  visualize.py
