[project]
name = "agentstack-agents"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "agentstack-sdk==0.4.1",
    "airportsdata>=20250909",
    "beeai-framework[agentstack]>=0.1.66",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "openinference-instrumentation-beeai>=0.1.13",
    "pyyaml>=6.0.2",
    "shapely>=2.1.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "agentstack_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]
